--- a/Samus.csproj
+++ b/Samus.csproj
@@ -35,6 +35,9 @@
     <Reference Include="BluffinMuffin.HandEvaluator, Version=3.1.2.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\BluffinMuffin.HandEvaluator.3.1.2\lib\BluffinMuffin.HandEvaluator.dll</HintPath>
     </Reference>
+    <Reference Include="HandEvaluator, Version=1.0.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\HandEvaluator.1.0.1\lib\net20\HandEvaluator.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -47,10 +50,13 @@
   <ItemGroup>
     <Compile Include="Card.cs" />
     <Compile Include="deck.cs" />
+    <Compile Include="Flop.cs" />
+    <Compile Include="Pay.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="PreFlop.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TwoCardRanking.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
