--- a/packages.config
+++ b/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="BluffinMuffin.HandEvaluator" version="3.1.2" targetFramework="net461" />
+  <package id="HandEvaluator" version="1.0.1" targetFramework="net461" />
 </packages>
