--- a/Samus.csproj
+++ b/Samus.csproj
@@ -40,6 +40,9 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.ValueTuple, Version=4.0.2.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.ValueTuple.4.4.0\lib\net461\System.ValueTuple.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -51,6 +54,10 @@
     <Compile Include="Card.cs" />
     <Compile Include="deck.cs" />
     <Compile Include="Flop.cs" />
+    <Compile Include="HandStrategies\Draws.cs" />
+    <Compile Include="HandStrategies\Folds.cs" />
+    <Compile Include="HandStrategies\HighCard.cs" />
+    <Compile Include="HandStrategies\PotOddsTolerance.cs" />
     <Compile Include="Pay.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="PreFlop.cs" />
