--- a/packages.config
+++ b/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="BluffinMuffin.HandEvaluator" version="3.1.2" targetFramework="net461" />
   <package id="HandEvaluator" version="1.0.1" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net461" />
 </packages>
