--- a/Samus.csproj
+++ b/Samus.csproj
@@ -52,28 +52,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Card.cs" />
-    <Compile Include="deck.cs" />
     <Compile Include="FileManipulation\CardTransform.cs" />
     <Compile Include="FileManipulation\Extractions.cs" />
     <Compile Include="FileManipulation\Listeners.cs" />
-    <Compile Include="Flop.cs" />
     <Compile Include="Streets\River.cs" />
     <Compile Include="Streets\Flopper.cs" />
-    <Compile Include="GetWinner.cs" />
     <Compile Include="HandStrategies\Draws.cs" />
-    <Compile Include="HandStrategies\Folds.cs" />
-    <Compile Include="HandStrategies\HighCard.cs" />
-    <Compile Include="HandStrategies\OnePair.cs" />
     <Compile Include="HandStrategies\PotOddsTolerance.cs" />
-    <Compile Include="MoreLinq\MoreEnumerable.MaxBy.cs" />
-    <Compile Include="Pay.cs" />
     <Compile Include="Player.cs" />
-    <Compile Include="PreFlop.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Resets\ReuseableMethods.cs" />
     <Compile Include="Streets\Turner.cs" />
-    <Compile Include="TwoCardRanking.cs" />
+    <Compile Include="HandStrategies\TwoCardRanking.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
